--- a/_config.yml
+++ b/_config.yml
@@ -185,6 +185,16 @@ collections:
 
 # Defaults
 defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      comments: true
+      share: true
+      related: true
   # _teaching
   - scope:
       path: ""
