--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Tom Tse"
+  name             : "Chun Hong Tse"
   avatar           : "profile.png"
   bio              : "Mphil student at the School of Journalism and Communication, The Chinese University of Hong Kong"
   location         : "Hong Kong"
