--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=H0VJuAMAAAAJ&hl=en"
-  email            :
+  email            : "chtse26-c@my.cityu.edu.hk"
   researchgate     : "https://www.researchgate.net/profile/Chun-Hong-Tse"
   uri              :
   bitbucket        :
