--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chun Hong Tse"
+title                    : "Chun Hong Tse/ Homepage"
 title_separator          : "-"
 name                     : &name "Chun Hong Tse"
 description              : &description "personal description"
