--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chun Hong Tse"
   avatar           : "profile.png"
-  bio              : "Mphil student at the School of Journalism and Communication, The Chinese University of Hong Kong"
+  bio              : "MPhil student at the School of Journalism and Communication, The Chinese University of Hong Kong"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
