--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Chun Hong Tse"
   avatar           : "profile.png"
-  bio              : "MPhil student at the School of Journalism and Communication, The Chinese University of Hong Kong"
-  location         : "Hong Kong"
+  bio              : "PhD student at the School of Journalism and Mass Communication, University of Wisconsin–Madison"
+  location         : "United States"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=H0VJuAMAAAAJ&hl=en"
-  email            : "chtse26-c@my.cityu.edu.hk"
+  email            : "ctse4@wisc.edu"
   researchgate     : "https://www.researchgate.net/profile/Chun-Hong-Tse"
   uri              :
   bitbucket        :
