--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,8 @@ main:
   - title: "Teaching"
     url: /tp/  
     
+   - title: "Radio"
+    url: /radio/     
+    
   - title: "CV"
     url: /cv/
