--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications"
     url: /publications/  
     
-  - title: "Teaching"
+  - title: "Teaching and Radio Experiences"
     url: /tp/    
     
   - title: "CV"
