--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chun Hong Tse"
-  avatar           : "profile.png"
+  avatar           : "IMG_9564.jpg"
   bio              : "PhD student at the School of Journalism and Mass Communication, University of Wisconsin–Madison"
   location         : "United States"
   employer         :
